src/core/_atgrid.scss
/*
/* atGrid.css v4.0.0 - Attribute-based CSS Grid System
/* https://github.com/kolcethompsonco/atgrid.css
/* MIT License - James Kolce <james@kolcethompson.com>
*/

//
// Configuration
// ----------------------------------------

// Max width for container
$container-width: 1200px !default;

// Gutter size
$gutter: 2em !default;

// Number of columns in a row
$num-columns: 12 !default;

// Prefix for attributes
$prefix: '' !default;


//
// Styles
// ----------------------------------------

[#{$prefix}container] {
  margin-left: auto;
  margin-right: auto;
  max-width: $container-width;
  padding-left: $gutter / 2;
  padding-right: $gutter / 2;
}

[#{$prefix}grid] {
  display: flex;
  margin-left: $gutter / -2;
  margin-right: $gutter / -2;
  flex-direction: column;

  // Collapse columns on breakpoint
  @media (--small) { flex-direction: row; }
}

[#{$prefix}column] { flex: 1; }


//
// Gutters by default
//

[#{$prefix}column] {
  padding-left: $gutter / 2;
  padding-right: $gutter / 2;
}


//
// No Gutters
//

[#{$prefix}grid~="ng"] {
  margin-left: 0;
  margin-right: 0;

  [#{$prefix}column] {
    padding-left: 0;
    padding-right: 0;
  }
}


//
// Alignment of all columns in a row
//

[#{$prefix}grid~="top"] { align-items: flex-start; }

[#{$prefix}grid~="center"] { align-items: center; }

[#{$prefix}grid~="bottom"] { align-items: flex-end; }


//
// Alignment of individual columns
//

[#{$prefix}column~="top"] { align-self: flex-start; }

[#{$prefix}column~="center"] { align-self: flex-end; }

[#{$prefix}column~="bottom"] { align-self: center; }


//
// Column widths
//

@for $i from 1 through $num-columns {
  [#{$prefix}column~="#{$i}"] {
    flex: 0 1 ($i/$num-columns) * 100%;
  }
}

//
// Column offsets
//

@for $i from 1 through $num-columns {
  [#{$prefix}column~="+#{$i}"] {
    margin-left: ($i/$num-columns) * 100%;
  }
}

